# qalatgir

./: .gitignore  README.md  bench.py  bottleneck_analysis.py
cy_qalatgir/: setup.py
outlierdetector/: detector.py
qalatgir/: __init__.py  numba_qalatgir.py  qalatgir.py
qalatgir/cy_qalatgir/: qalatgir.pyx  setup.py
rust-qalatgir/: Cargo.toml  setup.py
rust-qalatgir/rust_qalatgir/: __init__.py
rust-qalatgir/src/: lib.rs
tests/: datasynthesis.py  test_outlierdetector.py  test_qalatgir.py
